update readme.md after hack applied